# orchestrator-canister

./: .gitignore  README.md
.claude/: settings.local.json
cert_builder/.azle/backend/canister/src/: candid.did  compiler_info.json
cert_builder/.dfx/local/: network-id
cert_builder/.dfx/local/canisters/backend/: constructor.did  service.did  service.did.d.ts  service.did.js
oracle/: README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
oracle/.azle/backend/canister/src/: candid.did  compiler_info.json
oracle/.azle/cert_manager_backend/canister/src/: compiler_info.json  main.js
oracle/.dfx/ic/canisters/backend/: constructor.did  constructor.old.did  service.did  service.did.d.ts  service.did.js
oracle/.dfx/ic/canisters/cert_manager_backend/: constructor.did  index.js  service.did.d.ts  service.did.js
oracle/.dfx/ic/lsp/: bs6hf-2aaaa-aaaam-ac4ua-cai.did  bv7br-xyaaa-aaaam-ac4uq-cai.did
oracle/.dfx/local/: canister_ids.json  network-id
oracle/.dfx/local/canisters/backend/: constructor.did  constructor.old.did  service.did  service.did.d.ts  service.did.js
oracle/.dfx/local/canisters/cert_manager_backend/: constructor.old.did  service.did.js
oracle/.dfx/local/lsp/: bkyz2-fmaaa-aaaaa-qaaaq-cai.did  rrkah-fqaaa-aaaaa-aaaaq-cai.did
oracle/.dfx/playground/: canister_ids.json  canister_timestamps.json
oracle/.dfx/playground/canisters/backend/: service.did.d.ts
oracle/.dfx/playground/canisters/cert_manager_backend/: constructor.did  service.did.d.ts
oracle/.dfx/playground/lsp/: y4oop-liaaa-aaaab-qacha-cai.did  yvnft-5aaaa-aaaab-qacgq-cai.did
oracle/save_modules/@akashnetwork/akashjs/: package.json
oracle/save_modules/@akashnetwork/akashjs/umd/: akashjs.js
oracle/src/backend/: index.did  index.ts
oracle/src/backend/services/: CertificateManager.js  akash_certificate_manager.ts  api-utils.ts  certificate.ts  constants.ts  deployment_akash.ts  deployment_akash_2.ts  deployment_akash_3.ts  deployment_workflow.ts  evm_rpc_interaction.ts  external_https.ts  file.yaml  get_address_akash.ts  interaction_evm.ts  jwt_ecdsa.ts  manifest.ts  new-test.ts  prices.ts  provider.ts  save_akash.ts  t.ts  timer.ts  toaa-deployment-workflow.ts  toaa.ts  user.ts  utils.ts
oracle/src/backend/services/synthetics/: constants.ts  pool_manager.ts
oracle/src/cert_manager_backend/: index.did  index.ts
oracle/src/cert_manager_backend/services/: get_address_akash.ts  interaction_evm.ts  new-test.ts
oracle/test/: pretest.ts  test.ts  tests.ts
tee-llm-dooor-canister/: .gitignore  LICENSE  README.md  canister_ids.json  dfx.json  package.json
tee-llm-dooor-canister/scripts/: canister_jwt_roundtrip.sh  test.sh  verify_es256k.mjs
tee-llm-dooor-canister/src/: config.ts  ecdsa.ts  index.ts  llmEndpoints.ts  teeEndpoints.ts  types.ts
tee-llm-dooor-canister/src/tee-validation/: tee-validator.ts  types.ts
vetkey-demo/caller/: Cargo.toml  README.md  dfx.json
vetkey-demo/caller/src/caller_backend/: Cargo.toml
vetkey-demo/caller/src/caller_backend/src/: lib.rs
vetkeys/: Cargo.toml  Readme.md  canister_ids.json  dfx.json  package.json  vetkeys.did  vetkeys.did.js
vetkeys/ic_vetkeys_manager_canister/: Cargo.toml  Makefile  dfx.json
vetkeys/ic_vetkeys_manager_canister/src/: lib.rs
vetkeys/ic_vetkeys_manager_canister/tests/: tests.rs
vetkeys/js/: README.md  backend-integration-example.js  callCanister.js  certificate-vetkd-workflow.js  emit-transport-g1.mjs  harbor_backend_demo.js  local-test-suite.js  package.json
vetkeys/scripts/: build_opt.sh  calls.sh
vetkeys/src/: lib.rs
vetkeys/src/declarations/vetkeys/: index.d.ts  index.js  vetkeys.did.d.ts  vetkeys.did.js
vetkeys_demo/: Cargo.toml  README.md  canister_ids.json  dfx.json  local.sh  mainnet.sh  package.json
vetkeys_demo/docs/: API.md  DEPLOYMENT.md  VETKD_GUIDE.md
vetkeys_demo/scripts/: README.md  gen_transport_key.js  vetkd_check.js
vetkeys_demo/src/: lib.rs  vetkeys_demo.did
(+7 files in other folders)
