[package]
name = "vetkeys"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk               = "0.18"
ic-cdk-macros        = "0.18"
ic-vetkeys           = "0.3"
ic-stable-structures = "0.6"          # mantém 0.6 por enquanto
ed25519-dalek        = { version = "2", default-features = false, features = ["rand_core"] }
rand                 = "0.8"
candid               = "0.10"
serde                = { version = "1", features = ["derive"] }
getrandom            = { version = "0.2", features = ["js"] }
