[package]
name = "vetkeys_demo"
version = "0.1.0"
edition = "2021"

[lib]               # gera wasm
crate-type = ["cdylib"]

[dependencies]
ic-cdk        = "0.18"
ic-cdk-macros = "0.18"
ic-vetkeys    = "0.3"
candid        = "0.10"
serde         = { version = "1", features = ["derive"] }
getrandom     = { version = "0.2", features = ["js"] }   # corrige build wasm
